--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "pyke-dominator",
   "private": true,
   "version": "1.1.0",
+  "type": "module",
   "description": "Pyke Dominator - League of Legends Matchup Analyzer",
   "author": "Az040",
   "repository": {
